--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,29 @@
+.LlistatNaus {
+  /* background-color: green; */
+  background-image: url(https://www.komar.de/en/media/catalog/product/cache/5/image/9df78eab33525d08d6e5fb8d27136e95/8/-/8-487_star_wars_intro_ma.jpg);
+  background-size: cover;
+  height: 98vh;
+  font-size: 1.5em;
+  color: rgb(21, 255, 0);
+}
+.LlistatNaus li{
+  padding-left: 3em;
+  /* margin-top: 1em; */
+}
+.LlistatNaus h3{
+  padding-left: 3em;
+  padding-top: 2em;
+}
+.menuBarTop {
+  z-index: 1;
+  max-height: em;
+  background-color: grey;
+}
+
 /* Redefinir estils */
 
 button {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   /* Green */
   border: none;
   color: white;
@@ -10,13 +32,12 @@ button {
   text-decoration: none;
   display: inline-block;
   font-size: calc(8px + 2vmin);
-  ;
 }
 
 img {
   display: block;
-  max-width: 60%;
-  height: auto;
+  /* width: 50%; */
+  max-height: 100%;
 }
 
 /* Estils aplicacio */
@@ -25,6 +46,7 @@ img {
   display: flex;
   flex-direction: column;
   /* text-align: center; */
+  background-color: green;
 }
 
 .App-logo {
@@ -52,8 +74,10 @@ img {
 }
 
 .App-body {
-  /* flex: 0 0 25em; */
-  background-color: black;
+  flex: 0 0 25em;
+  /* background-color: black; */
+  background-image: url(https://www.komar.de/en/media/catalog/product/cache/5/image/9df78eab33525d08d6e5fb8d27136e95/8/-/8-487_star_wars_intro_ma.jpg);
+  background-size: cover;
   min-height: 80vh;
   display: flex;
   flex-direction: row;
@@ -63,8 +87,8 @@ img {
   color: white;
 }
 
-.App.CosPagNaus {
-  background-color: black;
+.App.CosPagNaus1 {
+  /* background-color: black; */
   color: white;
   display: flex;
   flex-direction: column;
@@ -76,7 +100,7 @@ img {
 
 .App-CosUnaNau {
   align-items: flex-start;
-  background-color: black;
+  /* background-color: black; */
   color: white;
   display: flex;
   flex-direction: column;
@@ -87,7 +111,7 @@ img {
 }
 
 .App-footer {
-  background-color: black;
+  /* background-color: black; */
   border: 1px solid white;
   display: flex;
   flex-direction: col;
